fix: Switch from getFirst to get(0)